--- a/Batch3BeerPj/css/style.css
+++ b/Batch3BeerPj/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   line-height: 1.5;
+  box-sizing: border-box;
 }
 
 @font-face {
@@ -140,4 +141,38 @@
 .content3 {
   text-align: justify;
   padding: 70px 100px 50px 120px;
+}
+
+/* INSTOCK */
+.white_background {
+  text-align: justify;
+}
+.white_background_left {
+  width: 50%;
+  float: left;
+  padding: 50px 100px 50px 120px;
+}
+
+.white_background_right {
+  padding: 50px 120px 50px 100px;
+}
+
+/* footer */
+footer {
+  background-color: black;
+  color: white;
+  padding: 30px 120px;
+}
+
+footer p {
+  float: left;
+}
+
+footer ul {
+  text-align: right;
+}
+
+footer ul li {
+  display: inline-block;
+  padding-left: 70px;
 }
